changed the meta tags

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ www.typeandgrids.com
 -->
 
 <title>Earnest Cain &mdash; Full-stack Developer</title>
-<meta name="description" content="The portfolio of designer Ivan Designostrom">
-<meta name="author" content="Ivan Designostrom">
+<meta name="description" content="The portfolio of developer Earnest Cain">
+<meta name="author" content="Earnest Cain">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <!-- CSS
