added new weather project

--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@ www.typeandgrids.com
 					<h4>Sports Messenger</h4>
 					<div class="projectNavCounter"></div>
 					<div class="projectNav">
-						<div class="projectNavEnlarge"><button class="enlargeButton" onClick="window.location.href='projects/project_01/index.html'">View full-size</button></div>
 						<div class="projectNavClose"><button class="closeButton">Close</button></div>
 						<div class="projectNavButtons"><button class="prev"></button><button class="next"></button></div>
 					</div>
@@ -134,7 +133,6 @@ www.typeandgrids.com
 					<h4>Rx_SMS</h4>
 					<div class="projectNavCounter"></div>
 					<div class="projectNav">
-						<div class="projectNavEnlarge"><button class="enlargeButton" onClick="window.location.href='projects/project_02/index.html'">View video</button></div>
 						<div class="projectNavClose"><button class="closeButton">Close</button></div>
 						<div class="projectNavButtons"><button class="prev"></button><button class="next"></button></div>
 					</div>
@@ -169,7 +167,6 @@ www.typeandgrids.com
 					<h4>ArtQuest</h4>
 					<div class="projectNavCounter"></div>
 					<div class="projectNav">
-						<div class="projectNavEnlarge"><button class="enlargeButton">View full-size</button></div>
 						<div class="projectNavClose"><button class="closeButton">Close</button></div>
 						<div class="projectNavButtons"><button class="prev"></button><button class="next"></button></div>
 					</div>
@@ -206,7 +203,6 @@ www.typeandgrids.com
 					<h4>BeerFellows</h4>
 					<div class="projectNavCounter"></div>
 					<div class="projectNav">
-						<div class="projectNavEnlarge"><button class="enlargeButton" onClick="window.location.href='projects/project_01/index.html'">View full-size</button></div>
 						<div class="projectNavClose"><button class="closeButton">Close</button></div>
 						<div class="projectNavButtons"><button class="prev"></button><button class="next"></button></div>
 					</div>
@@ -218,14 +214,49 @@ www.typeandgrids.com
 						<li><strong>Role:</strong> Developer</li>
 						<li><strong>Year:</strong> 2016</li>
 						<li><strong>Tools:</strong> JavaScript, jQuery, HTML, CSS.</li>
-						<li><strong>Location:</strong> <a href="https://github.com/aliza89p/Rx_SMS">View here</a></li>
+						<li><strong>Location:</strong> <a href="https://github.com/traceyr/BeerFellows">View here</a></li>
 					</ul>
 				</div>
 
 			</div>
 			<!-- Project ends =================================================================== -->
 
-		</div><!-- col1 -->
+            <!-- Project begins ================================================================= -->
+            <div class="project">
+
+                <div class="projectThumbnail">
+                    <svg class="thumbnailMask"></svg>
+                    <div class="projectThumbnailHover">
+                        <h4>WeatherTechie</h4>
+                        <h5>Weather application that allows statistics on temp, pressure, and humidity.</h5>
+                    </div>
+                    <img src="images/projects/techie.png" alt="weather techie" class="thumbnailImage" />
+                </div>
+
+                <div class="projectInfo">
+                    <h4>BeerFellows</h4>
+                    <div class="projectNavCounter"></div>
+                    <div class="projectNav">
+                        <div class="projectNavClose"><button class="closeButton">Close</button></div>
+                        <div class="projectNavButtons"><button class="prev"></button><button class="next"></button></div>
+                    </div>
+                    <p>
+                        Weather application built with redux, react, and vanilla JS. If you are curious about the weather conditions in different regions then boy do we have the solution.  Just give us a try and prepare to be enlightened.
+                    </p>
+                    <ul>
+                        <li><strong>Contributors:</strong>Earnest "tre" Cain</li>
+                        <li><strong>Role:</strong> Developer</li>
+                        <li><strong>Year:</strong> 2017</li>
+                        <li><strong>Tools:</strong> JavaScript, React, HTML, CSS, Sparklines, Weather API.</li>
+                        <li><strong>Location:</strong> <a href="https://github.com/ercain03/weather-techie">View here</a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <!-- Project ends =================================================================== -->
+
+
+        </div><!-- col1 -->
 
 		<!-- Even numbered projects are dynamically moved into this second column via JS -->
 		<div class="eight columns" id="col2">
